# Audio-Player

./: README.md
Audioplayer with Metadata/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Audioplayer with Metadata/Credits/: Credits.txt
